--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animatecss": "^3.0.4",
     "typescript": "5.1.3"
   }
 }
