--- a/package.json
+++ b/package.json
@@ -3,26 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
+    "eslint-config-next": "15.3.0",
+    "next": "15.3.0",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-youtube": "^10.1.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animatecss": "^3.0.4",
     "typescript": "5.1.3"
+  },
+  "overrides": {
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2"
   }
 }
