--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@types/react": "19.1.1",
     "@types/react-dom": "19.1.2",
     "animate.css": "^4.1.1",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "15.3.0",
-    "next": "15.3.0",
-    "postcss": "8.4.24",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.3.0",
+    "postcss": "^8.4.24",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-youtube": "^10.1.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.2",
     "tailwindcss-animatecss": "^3.0.4",
     "typescript": "5.1.3"
   },
